--- a/src/components/Header/Header.sass
+++ b/src/components/Header/Header.sass
@@ -1,10 +1,10 @@
 header
     display: flex
+    align-items: center
     height: 60px
     width: 100%
     background: #4e4848
     box-shadow: inset 0 0 10px #000000
-.header__name
-    color: #fff
-    span
-        display: inline-block
+.header__logo
+    max-height: 100%
+    width: auto
