--- a/src/components/Header/Header.sass
+++ b/src/components/Header/Header.sass
@@ -3,8 +3,7 @@ header
     align-items: center
     height: 60px
     width: 100%
-    background: #4e4848
-    box-shadow: inset 0 0 10px #000000
+    background: #003E51
 .header__logo
     max-height: 100%
     width: auto
