created redux methods for both current weather data and 5 day forecast. started the implementation of geolocation as an extra feature

--- a/src/components/pages/Home/Home.sass
+++ b/src/components/pages/Home/Home.sass
@@ -10,8 +10,8 @@
   height: 64px
   margin: 8px
   border-radius: 50%
-  border: 6px solid #36465c
-  border-color: #36465c transparent #36465c transparent
+  border: 6px solid #ffffff
+  border-color: #ffffff transparent #ffffff transparent
   animation: lds-dual-ring 1.2s linear infinite
 
 @keyframes lds-dual-ring
@@ -20,3 +20,8 @@
 
   100%
     transform: rotate(360deg)
+
+.centered
+  position: absolute
+  left: 50%
+  transform: translateX(-50%)
