--- a/src/components/LocationSearch/LocationSearch.sass
+++ b/src/components/LocationSearch/LocationSearch.sass
@@ -1,5 +1,7 @@
+.location-search
+    position: relative
 .location-search__searchbox
-    background: #003E51
+    background: transparent
     color: #ffffff
     border: none
     border-bottom: 2px solid #fff
@@ -13,3 +15,13 @@
         max-height: 40px
 .location-search__searchbutton:active
     transform: rotate(45deg) scale(0.75)
+.search-list
+    position: absolute
+    background: #535e90
+    max-height: 300px
+    overflow-y: auto
+    transform: translateX(-50%)
+    left: 50%
+    z-index: 999
+.search-list__result
+    text-align: left
