--- a/src/index.sass
+++ b/src/index.sass
@@ -1,7 +1,8 @@
 body
     height: 100vh
     width: 100vw
-    background-color: #003E51
+    background: rgb(86,30,113)
+    background: linear-gradient(180deg, rgba(86,30,113,1) 3%, rgba(81,74,112,1) 44%, rgba(83,94,144,1) 100%)
     color: #fff
 .user-select--none
     -webkit-user-select: none
