--- a/src/components/LocationSearch/LocationSearch.sass
+++ b/src/components/LocationSearch/LocationSearch.sass
@@ -4,7 +4,6 @@
     background: transparent
     color: #ffffff
     border: none
-    border-bottom: 2px solid #fff
     font-size: 1.5rem
 .location-search__searchbutton
     background: transparent
@@ -15,9 +14,16 @@
         max-height: 40px
 .location-search__searchbutton:active
     transform: rotate(45deg) scale(0.75)
+.searchbox__underline
+    height: 2px
+    background: #ffffff
+    transition: 0.5s width ease-in-out
 .search-list
     position: absolute
-    background: #535e90
+    background: linear-gradient(180deg, rgba(86,30,113,1) 3%, rgba(81,74,112,1) 44%, rgba(83,94,144,1) 100%)
+    border-right: 2px solid #fff
+    border-bottom: 2px solid #fff
+    border-left: 2px solid #fff
     max-height: 300px
     overflow-y: auto
     transform: translateX(-50%)
@@ -25,3 +31,5 @@
     z-index: 999
 .search-list__result
     text-align: left
+.search-list__result--selected
+    background: #000
