--- a/src/components/ForecastCarousel/ForecastCarousel.sass
+++ b/src/components/ForecastCarousel/ForecastCarousel.sass
@@ -1,6 +1,7 @@
 .forecast-carousel
     width: 100%
     height: 100%
+    box-shadow: 0 0 10px #333
 .carousel
     width: 100%
     height: 100%
@@ -8,5 +9,4 @@
         height: 100%
 .carousel__item
     height: 100%
-    background: lightgray
-    box-shadow: inset 0 0 5px #333
+    box-shadow: 0 0 5px #333
