added weather icon library to the project and edited styling settings

--- a/src/components/CurrentForecast/CurrentForecast.sass
+++ b/src/components/CurrentForecast/CurrentForecast.sass
@@ -1,2 +1,10 @@
-.current-forecast
-    
+.wi-fw
+    font-size: 3.2em
+    margin-right: 2.3rem
+.weather-info-table
+    td
+        padding: 5px
+.current-forecast__time-container
+    position: absolute
+    right: 0
+    bottom: 0
