--- a/src/index.sass
+++ b/src/index.sass
@@ -9,3 +9,10 @@ body
     -moz-user-select: none
     -ms-user-select: none
     user-select: none
+.opacity--zero
+    opacity: 0
+.height--50
+    height: 50%
+
+.main-temperature
+    font-size: 3.2rem
