--- a/src/components/ForecastCarousel/ForecastCarousel.sass
+++ b/src/components/ForecastCarousel/ForecastCarousel.sass
@@ -1,4 +1,5 @@
 .forecast-carousel
+    position: relative
     width: 100%
     height: 100%
     box-shadow: 0 0 10px #333
@@ -10,3 +11,21 @@
 .carousel__item
     height: 100%
     box-shadow: 0 0 5px #333
+.carousel-button-group
+    top: -43px
+    right: 0
+.carousel-button-group__button
+    height: 43px
+    width: auto
+    background: transparent
+    border-radius: 50%
+    transform: scale(1)
+    transition: 0.2s transform ease-in-out
+    img
+        max-height: 100%
+.carousel-button-group__button:active
+    transform: scale(0.75)
+$breakpoint-tablet: 1024px
+@media (max-width: $breakpoint-tablet)
+    .carousel-button-group
+        display: none
