--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Baloo+Bhaina+2&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@300&display=swap');
 body {
   width: 100vw;
   height: 100vh;
   margin: 0;
-  font-family: 'Baloo Bhaina 2', cursive;
+  font-family: 'Manrope', sans-serif;
 }
 
 code {
-  font-family: 'Baloo Bhaina 2', cursive;
+  font-family: 'Manrope', sans-serif;
 }
 
 button:focus {outline:none;}
