divided components into smaller entities and edited ui presentation of the api data

--- a/src/components/ForecastCarousel/ForecastCarousel.sass
+++ b/src/components/ForecastCarousel/ForecastCarousel.sass
@@ -25,6 +25,13 @@
         max-height: 100%
 .carousel-button-group__button:active
     transform: scale(0.75)
+.wi-fw--small
+    font-size: 2rem !important
+.main-temperature--small
+    font-size: 2rem
+.carousel-font
+    font-size: 0.8rem
+
 $breakpoint-tablet: 1024px
 @media (max-width: $breakpoint-tablet)
     .carousel-button-group
