added icon for wind direction and divided components into smaller entities

--- a/src/index.sass
+++ b/src/index.sass
@@ -16,3 +16,13 @@ body
 
 .main-temperature
     font-size: 3.2rem
+
+.forecast-thumbnail
+    h1
+        font-size: 2rem
+    h5
+       font-size: 1.1rem 
+    h6
+        font-size: 0.8rem
+    .wi-fw
+        font-size: 2rem !important
