--- a/src/components/LocationSearch/LocationSearch.sass
+++ b/src/components/LocationSearch/LocationSearch.sass
@@ -1,3 +1,6 @@
+/*---------------------------*/
+// LocationSearch component style settings
+/*----------------*/
 .location-search
     position: relative
 .location-search__searchbox
@@ -18,6 +21,10 @@
     height: 2px
     background: #ffffff
     transition: 0.5s width ease-in-out
+
+/*---------------------------*/
+// SearchList component style settings
+/*----------------*/
 .search-list
     position: absolute
     background: linear-gradient(180deg, rgba(86,30,113,1) 3%, rgba(81,74,112,1) 44%, rgba(83,94,144,1) 100%)
