--- a/src/components/ForecastCarousel/ForecastCarousel.sass
+++ b/src/components/ForecastCarousel/ForecastCarousel.sass
@@ -2,7 +2,7 @@
     position: relative
     width: 100%
     height: 100%
-    box-shadow: 0 0 10px #333
+    box-shadow: 0 0 5px #ffffff
 .carousel
     width: 100%
     height: 100%
@@ -10,7 +10,7 @@
         height: 100%
 .carousel__item
     height: 100%
-    box-shadow: 0 0 5px #333
+    box-shadow: 0 0 3px #ffffff
 
 /*---------------------------*/
 // FormatCarousel component's Custom Buttongroup style settings
