--- a/src/styles/ForecastCarousel.sass
+++ b/src/styles/ForecastCarousel.sass
@@ -23,13 +23,15 @@
     height: 43px
     width: auto
     background: transparent
+    border: 1px solid #fff
     border-radius: 50%
     transform: scale(1)
     transition: 0.2s transform ease-in-out
     img
         max-height: 100%
-.carousel-button-group__button:active
-    transform: scale(0.75)
+    &:active
+        transform: scale(0.75)
+    
 
 /*---------------------------*/
 // Style settings for ForecastCarousel's buttongroup on smaller device screen sizes
